--- a/power-libperfmgr/aidl/android.hardware.power-service.sdm710-libperfmgr.rc
+++ b/power-libperfmgr/aidl/android.hardware.power-service.sdm710-libperfmgr.rc
@@ -1,4 +1,4 @@
-service vendor.power-hal-aidl /vendor/bin/hw/android.hardware.power-service.sm7250-libperfmgr
+service vendor.power-hal-aidl /vendor/bin/hw/android.hardware.power-service.sdm710-libperfmgr
     class hal
     user root
     group system input
