--- a/power-libperfmgr/hidl/android.hardware.power@1.3-service.sdm710-libperfmgr.rc
+++ b/power-libperfmgr/hidl/android.hardware.power@1.3-service.sdm710-libperfmgr.rc
@@ -1,4 +1,4 @@
-service vendor.power-hal-1-3 /vendor/bin/hw/android.hardware.power@1.3-service.sm7250-libperfmgr
+service vendor.power-hal-1-3 /vendor/bin/hw/android.hardware.power@1.3-service.sdm710-libperfmgr
     class hal
     user root
     group system
